changed some fonts and updated my resume

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body {
     font-size: 16px;
     background-color: #fff;
+
 }
 
 i {
@@ -10,8 +11,9 @@ i {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-font-weight: 600;
+font-family: 'Open Sans', sans-serif, Montserrat,"Helvetica Neue",Helvetica,Arial;
+color: #4C4C4C;
+font-weight: 400;
 }
 
 a {color: #3E6D92;
